k8s/wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      # securityContext:
      # runAsUser: 1000
      # runAsGroup: 3000
      # fsGroup: 2000
      containers:
        - name: wallabag
          image: docker.io/wallabag/wallabag:2.6.14 # {"$imagepolicy": "flux-system:wallabag"}
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 32m
            limits:
              memory: 512Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
      volumes:
        - name: wallabag-data
          persistentVolumeClaim:
            claimName: wallabag-data
