k8s/wallabag/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: wallabag
  type: ClusterIP
